# DIY-UWB-Module

./: .gitignore  LICENSE  README.md  README_CN.md  THIRD_PARTY_NOTICES.md
NXP_Android_UWBJetpackExample-main/source/: build.gradle
NXP_Android_UWBJetpackExample-main/source/app/: build.gradle
NXP_Android_UWBJetpackExample-main/source/app/src/main/: AndroidManifest.xml
NXP_Android_UWBJetpackExample-main/source/app/src/main/res/layout/: activity_main.xml
NXP_Android_UWBJetpackExample-main/source/app/src/main/res/values/: strings.xml
NXP_Android_UWBJetpackExample-main/source/gradle/wrapper/: gradle-wrapper.properties
Qorvo_Apple_Nearby_Interaction_v1.3/: README.md
Qorvo_Apple_Nearby_Interaction_v1.3/NINearbyAccessorySample/: QorvoDemoViewController.swift
docs/: ble-oob-protocol.md
docs/development-guide/: DW3220-Development-Guide.md
docs/hardware-guide/: DW3220-Hardware-Guide.md
firmware/esp32-dw3220/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/esp32-dw3220/main/: CMakeLists.txt  main.c
firmware/esp32-dw3220/main/ble_oob/: ble_gatt_server.c  ble_gatt_server.h  oob_protocol.c  oob_protocol.h
firmware/esp32-dw3220/main/dw3220_driver/: dw3220_spi.c  dw3220_spi.h  dw3220_uwb.c  dw3220_uwb.h
firmware/esp32-dw3220/main/ni_accessory/: ni_protocol.c  ni_protocol.h
firmware/esp32-dw3220/main/platform/: apple_ni_adapter.c  apple_ni_adapter.h  fira_responder_adapter.c  fira_responder_adapter.h
firmware/esp32-dw3220/main/session/: session_manager.c  session_manager.h
(+5 files in other folders)
